# qt_mmu

./: .gitignore  CMakeLists.txt  main.cpp  main.py  resources.qrc
assets/: delegates.txt
include/: pdf_viewer.hpp  video_player.hpp
src/: main.cpp  pdf_viewer.cpp  video_player.cpp
